--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="s5muYFYiIuBO4jfx9-yg5YzhjIGM9B6BUwsCoIQKdaY" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Added viewport meta tag -->
     <meta name="theme-color" content="#000000" />
