--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="google-site-verification" content="s5muYFYiIuBO4jfx9-yg5YzhjIGM9B6BUwsCoIQKdaY" />
-    <link rel="icon" href="%PUBLIC_URL%/pic02.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> <
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Added viewport meta tag -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="TechCore supporting towards a cause helping reduce the digital divide"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/pic02.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TechCore</title>
   </head>
