--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="TechCore supporting towards a cause helping reduce the digital divide"
     />
+    <link href="./output.css" rel="stylesheet">
+
     <head>
         <link
           rel="stylesheet"
